--- a/chcloud/templates/gallery.html
+++ b/chcloud/templates/gallery.html
@@ -3,5 +3,30 @@
 {% block title %}{{ super() }} - Gallery{% endblock title %}
 
 {% block content %}
-    {% cloudinary_url 'do_it_for_them' %}
+    <h1>Gallery</h1>
+    <div class="card-deck">
+        {% for photo in uploads %}
+            {# Make the card deck responsive: #}
+            {% if loop.index % 2 == 0 %}
+            <div class="w-100 d-none d-sm-block d-md-none"><!-- wrap every 2 on sm--></div>
+            {% endif %}
+            {% if loop.index % 3 == 0 %}
+            <div class="w-100 d-none d-md-block d-lg-none"><!-- wrap every 3 on md--></div>
+            {% endif %}
+            {% if loop.index % 4 == 0 %}
+            <div class="w-100 d-none d-lg-block d-xl-none"><!-- wrap every 4 on lg--></div>
+            {% endif %}
+            {% if loop.index % 5 == 0 %}
+            <div class="w-100 d-none d-xl-block"><!-- wrap every 5 on xl--></div>
+            {% endif %}
+
+            <div class="card mb-4">
+                <img class="card-img-top img-fluid" src="{% cloudinary_url photo['public_id'] width=300 %}" alt="{{ photo['public_id'] }}">
+                <div class="card-body">
+                    <h4 class="card-title">{{ photo['public_id'] }}</h4>
+                    <p class="card-text"><small class="text-muted">Tags: TODO</small></p>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock content %}
