bugfix: missing comma in jinja template

--- a/chcloud/templates/gallery.html
+++ b/chcloud/templates/gallery.html
@@ -21,7 +21,7 @@
             {% endif %}
 
             <div class="card mb-4">
-                <img class="card-img-top img-fluid" src="{% cloudinary_url photo['public_id'] width=300 %}" alt="{{ photo['public_id'] }}">
+                <img class="card-img-top img-fluid" src="{% cloudinary_url photo['public_id'], width=300 %}" alt="{{ photo['public_id'] }}">
                 <div class="card-body">
                     <h4 class="card-title">{{ photo['public_id'] }}</h4>
                     <p class="card-text"><small class="text-muted">Tags: TODO</small></p>
