--- a/chcloud/templates/gallery.html
+++ b/chcloud/templates/gallery.html
@@ -23,8 +23,8 @@
             <div class="card mb-4">
                 <img class="card-img-top img-fluid" src="{% cloudinary_url photo['public_id'], width=300, secure=true %}" alt="{{ photo['public_id'] }}">
                 <div class="card-body">
-                    <h4 class="card-title">{% if photo['context'] is defined %}{{ photo['context']['custom']['title'] }}{% else %}{{ photo['public_id'] }}{% endif %}</h4>
-                    <p class="card-text">Uploaded by: {% if photo['context'] is defined %}{{ photo['context']['custom']['_user'] }}{% else %}Unknown user{% endif %}</p>
+                    <h4 class="card-title">{{ photo['context']['custom']['title'] }}</h4>
+                    <p class="card-text">Uploaded by: {{ photo['context']['custom']['user'].display_name }}</p>
                     <p class="card-text"><a href="{% cloudinary_url photo['public_id'], secure=true %}">Direct link to photo</a></p>
                     <p class="card-text"><small class="text-muted">Tags: {% if photo['tags'] is defined %}{{ photo['tags']|join(', ') }}{% else %}TODO{% endif %}</small></p>
                 </div>
