--- a/chcloud/templates/gallery.html
+++ b/chcloud/templates/gallery.html
@@ -31,12 +31,13 @@
                     <p class="card-text">Uploaded by: {{ photo['context']['custom']['user'].display_name }}</p>
                     {% if current_user.slack_id == photo['context']['custom']['user'].slack_id %}
                         <p class="card-text"><a href="{{ url_for('gallery_edit', public_id=photo['public_id']) }}">Edit photo</a></p>
+                    {% endif %}
                     <p class="card-text"><a href="{% cloudinary_url photo['public_id'], secure=true %}">Direct link to photo</a></p>
                     <p class="card-text"><small class="text-muted">Tags: {% if photo['tags'] is defined %}{{ photo['tags']|join(', ') }}{% else %}TODO{% endif %}</small></p>
                 </div>
             </div>
         {% endfor %}
 
-        <a href="{{ url_for('gallery_edit') }}"
+        <a href="{{ url_for('gallery_edit') }}">Upload new image</a>
     </div>
 {% endblock content %}
