--- a/chcloud/templates/gallery_edit.html
+++ b/chcloud/templates/gallery_edit.html
@@ -52,10 +52,15 @@
 
     <script type="application/javascript">
         $(document).ready(function() {
-            var data;
+            var data = [
+                {
+                    id: 'placeholder',
+                    text: 'placeholder'
+                }
+            ];
 
             $.getJSON('{{ url_for('api_tags') }}', function(res) {
-                data = res;
+                data = res['results'];
             });
 
             $('#{{ form.tags.id }}').select2({
