gallery edit - select2 choices mess part 7 (does this work?)

--- a/chcloud/templates/gallery_edit.html
+++ b/chcloud/templates/gallery_edit.html
@@ -54,6 +54,19 @@
         $(document).ready(function() {
             $.getJSON('{{ url_for('api_tags') }}', function(res) {
                 var data = res['results'];
+                var tags_selected = {{ tags_selected }};
+
+                if (tags_selected.length > 0) {
+                    data = data.map(function (item) {
+                        if (tags_selected.indexOf(item['text']) !== -1) {
+                            item.selected = true;
+                        }
+                        return item
+                    });
+                }
+
+                // Delete render placeholder
+                $('#{{ form.tags.id }}').empty();
 
                 $('#{{ form.tags.id }}').select2({
                     data: data,
