gallery edit - select2 choices mess part 7a

--- a/chcloud/templates/gallery_edit.html
+++ b/chcloud/templates/gallery_edit.html
@@ -54,7 +54,7 @@
         $(document).ready(function() {
             $.getJSON('{{ url_for('api_tags') }}', function(res) {
                 var data = res['results'];
-                var tags_selected = {{ tags_selected }};
+                var tags_selected = {{ tags_selected|safe }};
 
                 if (tags_selected.length > 0) {
                     data = data.map(function (item) {
