gallery edit - select2 choices mess part 9

--- a/chcloud/templates/gallery_edit.html
+++ b/chcloud/templates/gallery_edit.html
@@ -12,6 +12,8 @@
     <form method="post" enctype="multipart/form-data" novalidate action="{{ url_for('gallery_edit', public_id=public_id) }}">
         {{ form.hidden_tag() }}
 
+        <input type="hidden" value="{{ s_tags_selected }}" name="s_tags_selected">
+
         {% if public_id is none %}
             <div class="form-group">
                 {{ form.image.label }}
