gallery - prettify upload button

--- a/chcloud/templates/gallery.html
+++ b/chcloud/templates/gallery.html
@@ -37,7 +37,6 @@
                 </div>
             </div>
         {% endfor %}
-
-        <a href="{{ url_for('gallery_edit') }}">Upload new image</a>
     </div>
+    <a href="{{ url_for('gallery_edit') }}" class="btn btn-primary">Upload new image</a>
 {% endblock content %}
