--- a/chcloud/templates/base_layout.html
+++ b/chcloud/templates/base_layout.html
@@ -12,6 +12,33 @@
     {% block head_content %}{% endblock head_content %}
   </head>
   <body>
+    {% if current_user is not none %}
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu_content" aria-controls="menu_content" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="menu_content">
+            <a class="navbar-brand">CH Image Cloud</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('gallery') }}">Gallery</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="user_menu_dropdown" role="button" data-toggle="dropdown">{{ current_user.display_name }}</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{{ url_for('settings') }}">Settings</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ url_for('logout') }}">Log out</a>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+    {% endif %}
     <div class="container">
         {% block content %}{% endblock content %}
     </div>
