--- a/chcloud/templates/settings.html
+++ b/chcloud/templates/settings.html
@@ -7,7 +7,7 @@
     <form method="POST" action="{{ url_for('settings') }}">
         {{ form.hidden_tag() }}
 
-        <div class="form-group">
+        <div class="form-group-row">
             {{ form.show_nsfw.label }}
             {{ form.show_nsfw(class_='form-control') }}
 
