settings form prettify take 3?

--- a/chcloud/templates/settings.html
+++ b/chcloud/templates/settings.html
@@ -7,9 +7,9 @@
     <form method="POST" action="{{ url_for('settings') }}">
         {{ form.hidden_tag() }}
 
-        <div class="form-check">
-            {{ form.show_nsfw.label }}
-            {{ form.show_nsfw(class_='form-control') }}
+        <div class="form-check form-check-inline">
+            {{ form.show_nsfw(class_='form-check-input') }}
+            {{ form.show_nsfw.label(class_='form-check-label') }}
 
             {% for error in form.show_nsfw.errors %}
                 <div class="invalid-feedback">
