settings form prettify take 4b

--- a/chcloud/templates/settings.html
+++ b/chcloud/templates/settings.html
@@ -7,7 +7,7 @@
     <form method="POST" action="{{ url_for('settings') }}">
         {{ form.hidden_tag() }}
 
-        <div class="form-check>
+        <div class="form-check">
             {{ form.show_nsfw(class_='form-check-input') }}
             {{ form.show_nsfw.label(class_='form-check-label') }}
 
